# ScientificComputingAssignment_I

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: contributions.yml  test.yml
reports/: effort_distribution.typ
rust/: Cargo.toml
rust/src/: cylinder.rs  lib.rs  main.rs
scripts/: benchmark_tdd.py
src/: lib.rs
src/scientific_computing/: __init__.py  _core.pyi  cli.py  example.py  example_module.py
src/scientific_computing/stationary_diffusion/: main.py
src/scientific_computing/stationary_diffusion/figures/: double_sink_animation.html  sink_animation.html
src/scientific_computing/stationary_diffusion/figures/archived/: SOR_single_sink_anim.html
src/scientific_computing/stationary_diffusion/iteration_techniques/: __init__.py  gauss_seidel_iteration.py  jacobi_iteration.py  sor_iteration.py
src/scientific_computing/stationary_diffusion/objects/: sinks.py
src/scientific_computing/stationary_diffusion/plotting/: diffusion_animation.py  plotting_functions.py
src/scientific_computing/stationary_diffusion/utils/: __init__.py  common_functions.py  constants.py  grid_initialisation.py
src/scientific_computing/time_dependent_diffusion/: __init__.py
src/scientific_computing/time_dependent_diffusion/utils/: __init__.py  animation.py  time_dependent_diffusion.py
src/scientific_computing/vibrating_strings_1d/: main.py
src/scientific_computing/vibrating_strings_1d/utils/: animation.py  constants.py  discretize_pde.py  grid_initialisation.py
stationary_diffusion/: main.py
stationary_diffusion/iteration_techniques/: gauss_seidel_iteration.py  jacobi_iteration.py
stationary_diffusion/tests/: test_iteration_techniques.py  test_utils.py
stationary_diffusion/tests/test_utils/: test_initialisation.py  test_jacobi_iteration.py
stationary_diffusion/utils/: common_functions.py  constants.py  grid_initialisation.py
tests/: test_example.py
tests/stationary_diffusion/: test_iteration_techniques.py  test_stationary_diffusion_utils.py
tests/time_dependent_diffusion/: test_time_dependent_diffusion_utils.py
tests/vibrating_strings_1d/: test_utils.py
time_dependent_diffusion/tests/: test_utils.py
time_dependent_diffusion/utils/: time_dependent_diffusion.py
vibrating_strings_1d/: main.py
vibrating_strings_1d/tests/: test_utils.py
vibrating_strings_1d/utils/: animation.py  constants.py  discretize_pde.py  grid_initialisation.py
