[project]
name = "scientific-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
]

[project.scripts]
# Commented out as this doesn't exist, but leaving 
#   here in case we add a CLI or other entrypoint.
#code = "code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pydocstyle
    #"D", # uncomment to check code for docstrings
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

# uncomment to check code for docstrings
#[tool.ruff.lint.pydocstyle]
#convention = "google"
