[project]
# Project metadata. This is what people would see if project 
#   was on PyPI.
name = "scientific-computing"
version = "0.1.0"
description = "Project code for Scientific Computing Assignment 1"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
]

# Defining the requirements for running the project.
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.125.3",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "py-spy>=0.4.0",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "typer>=0.15.1",
]

[project.scripts]
scicomp = "scientific_computing.cli:app"

[tool.maturin]
module-name = "scientific_computing._core"
python-packages = ["scientific_computing"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.pyright]
# Makes sure that Henry's editor (neovim) can see the uv virtual environment
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# Ruff (code linting + formatting) rules. Can add/remove.
select = [
    # pydocstyle
    #"D", # uncomment to check code for docstrings
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

# uncomment to check code for docstrings
#[tool.ruff.lint.pydocstyle]
#convention = "google"
